2008-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm:  Clean up terminal code.
	Use shared routines gp_alloc(), int_expression().
	Switch to using same set of colors as other terminals (web_color_rgbs).
	Handle RGB color request by returning closest match to a known color.
	Don't over-write user colors with each new palette.
	Decouple dash pattern from line color.

	* src/command.h:  refresh_request() depends on VOLATILE_REFRESH, not
	USE_MOUSE.

2008-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_fillbox CGM_filled_polygon):  Move the
	management of fill styles and pm3d fill from CGM_fillbox() to 
	CGM_filled_polygon().  This is necessary because while boxes and
	histograms call filled_polygon via term->fillbox(), the pm3d code
	calls term->filled_polygon directly.
	Bugfix.

2008-02-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_format set_tics set_tic_prop) docs/gnuplot.doc:
	Allow string variables to specify the tic format. Also introduce
	a format keyword for "set tics" and "set {axis} tics".
	"set tics format 'foo'"  is equivalent to "set format 'foo'"
	"set ytics format 'baz'" is equivalent to "set format y 'baz'"

2008-02-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (map_position place_objects) src/graphics.h src/mouse.c
	src/color.c:  Change map_position() to return (int) x,y rather than
	(unsigned int). Callers are modified accordingly.
	Bug #1903131

	Rationale: This avoids implicit casting that breaks clipping
	calculations on ia64 and PPC.  This patchset fixes clipping of labels
	and rectangles.  Similar clean-up should be done everywhere,
	It is a mistake to use unsigned coordinates before clipping.

2008-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/datafile.c src/gadgets.c src/term.c src/gplt_x11.c
	term/cairo.trm term/cgm.trm term/dumb.trm term/eepic.trm term/gd.trm
	term/pdf.trm term/post.trm term/x11.trm src/wxterminal/wxt_term.h